--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">App</string>
+
+    //sliders texts
+    <string name="text1">Easily track your Utility Bill Payments.</string>
+    <string name="text2">Save on your bills by Analyzing Expenses.</string>
+    <string name="text3">Save on your bills by Analyzing Expenses.</string>
 </resources>
