--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">App</string>
+    <string name="app_name">Utilia</string>
 
     //sliders texts
     <string name="text1">Easily track your Utility Bill Payments.</string>
